pratique/2013-p2-f2-troia/2013-p2-f2-troia-comp.txt
2013-p2-f2-troia.cpp: In function ‘void unionSets(int, int)’:
2013-p2-f2-troia.cpp:21:13: error: reference to ‘rank’ is ambiguous
   21 |         if (rank[rootX] < rank[rootY]) {
      |             ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2013-p2-f2-troia.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2013-p2-f2-troia.cpp:8:13: note:                 ‘std::vector<int> rank’
    8 | vector<int> rank;
      |             ^~~~
2013-p2-f2-troia.cpp:21:27: error: reference to ‘rank’ is ambiguous
   21 |         if (rank[rootX] < rank[rootY]) {
      |                           ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2013-p2-f2-troia.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2013-p2-f2-troia.cpp:8:13: note:                 ‘std::vector<int> rank’
    8 | vector<int> rank;
      |             ^~~~
2013-p2-f2-troia.cpp:23:20: error: reference to ‘rank’ is ambiguous
   23 |         } else if (rank[rootX] > rank[rootY]) {
      |                    ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2013-p2-f2-troia.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2013-p2-f2-troia.cpp:8:13: note:                 ‘std::vector<int> rank’
    8 | vector<int> rank;
      |             ^~~~
2013-p2-f2-troia.cpp:23:34: error: reference to ‘rank’ is ambiguous
   23 |         } else if (rank[rootX] > rank[rootY]) {
      |                                  ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2013-p2-f2-troia.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2013-p2-f2-troia.cpp:8:13: note:                 ‘std::vector<int> rank’
    8 | vector<int> rank;
      |             ^~~~
2013-p2-f2-troia.cpp:27:13: error: reference to ‘rank’ is ambiguous
   27 |             rank[rootX]++;
      |             ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2013-p2-f2-troia.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2013-p2-f2-troia.cpp:8:13: note:                 ‘std::vector<int> rank’
    8 | vector<int> rank;
      |             ^~~~
2013-p2-f2-troia.cpp: In function ‘int main()’:
2013-p2-f2-troia.cpp:37:5: error: reference to ‘rank’ is ambiguous
   37 |     rank.resize(N + 1, 0);
      |     ^~~~
In file included from /usr/include/c++/11/bits/move.h:57,
                 from /usr/include/c++/11/bits/exception_ptr.h:43,
                 from /usr/include/c++/11/exception:153,
                 from /usr/include/c++/11/ios:39,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2013-p2-f2-troia.cpp:2:
/usr/include/c++/11/type_traits:1369:12: note: candidates are: ‘template<class> struct std::rank’
 1369 |     struct rank
      |            ^~~~
2013-p2-f2-troia.cpp:8:13: note:                 ‘std::vector<int> rank’
    8 | vector<int> rank;
      |             ^~~~
